DCF_HC12TransmitterV38d/Errors.txt
 digitalWrite(DCF_LED_Pin, !digitalRead(DCF_PIN));  
Error -->   cannot convert 'bool' to 'PinStatus' for argument '2' to 'void digitalWrite(pin_size_t, PinStatus)'
digitalWrite(DCF_LED_Pin, 1-digitalRead(DCF_PIN));    // --> Works




Compiling sketch...
"C:\\Users\\ednie\\AppData\\Local\\Arduino15\\packages\\arduino\\tools\\avr-gcc\\7.3.0-atmel3.6.1-arduino5/bin/avr-g++" -c -g -Os -w -std=gnu++11 -fpermissive -fno-exceptions -ffunction-sections -fdata-sections -fno-threadsafe-statics -Wno-error=narrowing -MMD -flto -mmcu=atmega4809 -DF_CPU=16000000L -DARDUINO=10812 -DARDUINO_AVR_ATmega4809 -DARDUINO_ARCH_MEGAAVR "-IC:\\Users\\ednie\\AppData\\Local\\Arduino15\\packages\\MegaCoreX\\hardware\\megaavr\\1.0.1\\cores\\coreX-corefiles/api/deprecated" "-IC:\\Users\\ednie\\AppData\\Local\\Arduino15\\packages\\MegaCoreX\\hardware\\megaavr\\1.0.1\\cores\\coreX-corefiles" "-IC:\\Users\\ednie\\AppData\\Local\\Arduino15\\packages\\MegaCoreX\\hardware\\megaavr\\1.0.1\\variants\\nano-every" "-IC:\\Users\\ednie\\AppData\\Local\\Arduino15\\packages\\MegaCoreX\\hardware\\megaavr\\1.0.1\\libraries\\Wire\\src" "-IC:\\Users\\ednie\\Documents\\Files\\Arduino\\libraries\\RTClib" "-IC:\\Users\\ednie\\Documents\\Files\\Arduino\\libraries\\Time" "-IC:\\Users\\ednie\\Documents\\Files\\Arduino\\libraries\\Adafruit_NeoPixel" "-IC:\\Users\\ednie\\AppData\\Local\\Arduino15\\packages\\MegaCoreX\\hardware\\megaavr\\1.0.1\\libraries\\EEPROM\\src" "-IC:\\Users\\ednie\\Documents\\Files\\Arduino\\libraries\\DCF77" "-IC:\\Users\\ednie\\AppData\\Local\\Arduino15\\packages\\MegaCoreX\\hardware\\megaavr\\1.0.1\\libraries\\SoftwareSerial\\src" "-IC:\\Users\\ednie\\Documents\\Files\\Arduino\\libraries\\TM1637" "-IC:\\Users\\ednie\\Documents\\Files\\Arduino\\libraries\\LedControl\\src" "C:\\Users\\ednie\\AppData\\Local\\Temp\\arduino_build_45924\\sketch\\DCF_HC12TransmitterV38d.ino.cpp" -o "C:\\Users\\ednie\\AppData\\Local\\Temp\\arduino_build_45924\\sketch\\DCF_HC12TransmitterV38d.ino.cpp.o"
In file included from C:\Users\ednie\AppData\Local\Arduino15\packages\MegaCoreX\hardware\megaavr\1.0.1\cores\coreX-corefiles/UART.h:28:0,

                 from C:\Users\ednie\AppData\Local\Arduino15\packages\MegaCoreX\hardware\megaavr\1.0.1\cores\coreX-corefiles/Arduino.h:142,

                 from C:\Users\ednie\AppData\Local\Temp\arduino_build_45924\sketch\DCF_HC12TransmitterV38d.ino.cpp:1:

C:\Users\ednie\AppData\Local\Arduino15\packages\MegaCoreX\hardware\megaavr\1.0.1\variants\nano-every/pins_arduino.h:145:28: error: 'PIN_A15' was not declared in this scope

 static const uint8_t A15 = PIN_A15;

                            ^~~~~~~

C:\Users\ednie\AppData\Local\Arduino15\packages\MegaCoreX\hardware\megaavr\1.0.1\variants\nano-every/pins_arduino.h:145:28: note: suggested alternative: 'PIN_A10'

 static const uint8_t A15 = PIN_A15;

                            ^~~~~~~

                            PIN_A10

C:\Users\ednie\Documents\Files\Arduino\DCF_HC12TransmitterV38d\DCF_HC12TransmitterV38d.ino: In function 'void DCF77Check()':

DCF_HC12TransmitterV38d:565:49: error: cannot convert 'bool' to 'PinStatus' for argument '2' to 'void digitalWrite(pin_size_t, PinStatus)'

  digitalWrite(DCF_LED_Pin, !digitalRead(DCF_PIN));

                                                 ^

Using library Wire at version 1.0 in folder: C:\Users\ednie\AppData\Local\Arduino15\packages\MegaCoreX\hardware\megaavr\1.0.1\libraries\Wire 
Using library RTClib at version 1.4.0 in folder: C:\Users\ednie\Documents\Files\Arduino\libraries\RTClib 
Using library Time at version 1.5 in folder: C:\Users\ednie\Documents\Files\Arduino\libraries\Time 
Using library Adafruit_NeoPixel at version 1.3.5 in folder: C:\Users\ednie\Documents\Files\Arduino\libraries\Adafruit_NeoPixel 
Using library EEPROM at version 2.0 in folder: C:\Users\ednie\AppData\Local\Arduino15\packages\MegaCoreX\hardware\megaavr\1.0.1\libraries\EEPROM 
Using library DCF77 at version 1.0.0 in folder: C:\Users\ednie\Documents\Files\Arduino\libraries\DCF77 
Using library SoftwareSerial at version 1.0 in folder: C:\Users\ednie\AppData\Local\Arduino15\packages\MegaCoreX\hardware\megaavr\1.0.1\libraries\SoftwareSerial 
Using library TM1637 at version 1.2.0 in folder: C:\Users\ednie\Documents\Files\Arduino\libraries\TM1637 
Using library LedControl at version 1.0.6 in folder: C:\Users\ednie\Documents\Files\Arduino\libraries\LedControl 


